@@ -47,8 +47,11 @@ import jakarta.transaction.Transaction;
 
 import org.keycloak.Config;
 import org.keycloak.Config.Scope;
+import org.keycloak.broker.provider.BrokeredIdentityContext;
+import org.keycloak.broker.provider.ConfigConstants;
 import org.keycloak.broker.social.SocialIdentityProvider;
 import org.keycloak.broker.social.SocialIdentityProviderFactory;
+import org.keycloak.cache.AlternativeLookupProvider;
 import org.keycloak.common.util.CertificateUtils;
 import org.keycloak.common.util.KeyUtils;
 import org.keycloak.common.util.PemUtils;
@@ -69,6 +72,7 @@ import org.keycloak.models.Constants;
 import org.keycloak.models.GroupModel;
 import org.keycloak.models.GroupProvider;
 import org.keycloak.models.GroupProviderFactory;
+import org.keycloak.models.IdentityProviderMapperModel;
 import org.keycloak.models.IdentityProviderModel;
 import org.keycloak.models.KeycloakContext;
 import org.keycloak.models.KeycloakSession;
@@ -80,6 +84,7 @@ import org.keycloak.models.RealmModel;
 import org.keycloak.models.RoleModel;
 import org.keycloak.models.ScopeContainerModel;
 import org.keycloak.models.UserModel;
+import org.keycloak.organization.OrganizationProvider;
 import org.keycloak.protocol.oidc.OIDCConfigAttributes;
 import org.keycloak.provider.Provider;
 import org.keycloak.provider.ProviderFactory;
@@ -109,7 +114,7 @@ public final class KeycloakModelUtils {
 
     public static final String GROUP_PATH_SEPARATOR = "/";
     public static final String GROUP_PATH_ESCAPE = "~";
-    private static final char CLIENT_ROLE_SEPARATOR = '.';
+    public static final char CLIENT_ROLE_SEPARATOR = '.';
 
     public static final int MAX_CLIENT_LOOKUPS_DURING_ROLE_RESOLVE = 25;
 
@@ -695,7 +700,7 @@ public final class KeycloakModelUtils {
 
     public static Collection<String> resolveAttribute(UserModel user, String name, boolean aggregateAttrs) {
         List<String> values = user.getAttributeStream(name).collect(Collectors.toList());
-        Set<String> aggrValues = new HashSet<String>();
+        Set<String> aggrValues = new HashSet<>();
         if (!values.isEmpty()) {
             if (!aggregateAttrs) {
                 return values;
@@ -717,70 +722,13 @@ public final class KeycloakModelUtils {
     }
 
 
-    private static GroupModel findSubGroup(String[] segments, int index, GroupModel parent) {
-        return parent.getSubGroupsStream().map(group -> {
-            String groupName = group.getName();
-            String[] pathSegments = formatPathSegments(segments, index, groupName);
-
-            if (groupName.equals(pathSegments[index])) {
-                if (pathSegments.length == index + 1) {
-                    return group;
-                } else {
-                    if (index + 1 < pathSegments.length) {
-                        GroupModel found = findSubGroup(pathSegments, index + 1, group);
-                        if (found != null) return found;
-                    }
-                }
-            }
-            return null;
-        }).filter(Objects::nonNull).findFirst().orElse(null);
-    }
-
-    /**
-     * Given the {@code pathParts} of a group with the given {@code groupName}, format the {@code segments} in order to ignore
-     * group names containing a {@code /} character.
-     *
-     * @param segments  the path segments
-     * @param index     the index pointing to the position to start looking for the group name
-     * @param groupName the groupName
-     * @return a new array of strings with the correct segments in case the group has a name containing slashes
-     */
-    private static String[] formatPathSegments(String[] segments, int index, String groupName) {
-        String[] nameSegments = groupName.split(GROUP_PATH_SEPARATOR);
-
-        if (nameSegments.length > 1 && segments.length >= nameSegments.length) {
-            for (int i = 0; i < nameSegments.length; i++) {
-                if (!nameSegments[i].equals(segments[index + i])) {
-                    return segments;
-                }
-            }
-
-            int numMergedIndexes = nameSegments.length - 1;
-            String[] newPath = new String[segments.length - numMergedIndexes];
-
-            for (int i = 0; i < newPath.length; i++) {
-                if (i == index) {
-                    newPath[i] = groupName;
-                } else if (i > index) {
-                    newPath[i] = segments[i + numMergedIndexes];
-                } else {
-                    newPath[i] = segments[i];
-                }
-            }
-
-            return newPath;
-        }
-
-        return segments;
-    }
-
     /**
      * Helper to get from the session if group path slashes should be escaped or not.
      * @param session The session
      * @return true or false
      */
     public static boolean escapeSlashesInGroupPath(KeycloakSession session) {
-        GroupProviderFactory fact = (GroupProviderFactory) session.getKeycloakSessionFactory().getProviderFactory(GroupProvider.class);
+        GroupProviderFactory<?> fact = (GroupProviderFactory<?>) session.getKeycloakSessionFactory().getProviderFactory(GroupProvider.class);
         return fact.escapeSlashesInGroupPath();
     }
 
@@ -803,7 +751,7 @@ public final class KeycloakModelUtils {
         }
         String[] split = splitPath(path, escapeSlashesInGroupPath(session));
         if (split.length == 0) return null;
-        return getGroupModel(session.groups(), realm, null, split, 0);
+        return getGroupModel(session, realm, null, split, 0);
     }
 
     /**
@@ -820,17 +768,39 @@ public final class KeycloakModelUtils {
         if (path == null || path.length == 0) {
             return null;
         }
-        return getGroupModel(session.groups(), realm, null, path, 0);
+        return getGroupModel(session, realm, null, path, 0);
     }
 
-    private static GroupModel getGroupModel(GroupProvider groupProvider, RealmModel realm, GroupModel parent, String[] split, int index) {
+    private static GroupModel getGroupModel(KeycloakSession session, RealmModel realm, GroupModel parent, String[] split, int index) {
         StringBuilder nameBuilder = new StringBuilder();
         for (int i = index; i < split.length; i++) {
             nameBuilder.append(split[i]);
-            GroupModel group = groupProvider.getGroupByName(realm, parent, nameBuilder.toString());
+
+            GroupModel group;
+            if (parent != null && GroupModel.Type.ORGANIZATION.equals(parent.getType())) {
+                // For organization groups, use OrganizationProvider.searchGroupsByName
+                OrganizationModel org = parent.getOrganization();
+                if (org == null) {
+                    return null;
+                }
+                OrganizationProvider orgProvider = session.getProvider(OrganizationProvider.class);
+                if (orgProvider == null) {
+                    // Organization feature disabled, cannot resolve organization group paths
+                    return null;
+                }
+                String parentId = parent.getId();
+                group = orgProvider.searchGroupsByName(org, nameBuilder.toString(), true, null, null)
+                    .filter(g -> parentId.equals(g.getParentId()))
+                    .findFirst()
+                    .orElse(null);
+            } else {
+                // For realm groups (or null parent), use GroupProvider.getGroupByName
+                group = session.groups().getGroupByName(realm, parent, nameBuilder.toString());
+            }
+
             if (group != null) {
                 if (i < split.length-1) {
-                    return getGroupModel(groupProvider, realm, group, split, i+1);
+                    return getGroupModel(session, realm, group, split, i+1);
                 } else {
                     return group;
                 }
@@ -970,12 +940,8 @@ public final class KeycloakModelUtils {
             return null;
         }
 
-        // Find the internal organization group (top-level group with name = organization UUID)
-        GroupModel orgInternalGroup = session.groups().getGroupByName(realm, null, organization.getId());
-        if (orgInternalGroup == null) {
-            // Internal organization group not found
-            return null;
-        }
+        OrganizationProvider orgProvider = session.getProvider(OrganizationProvider.class);
+        GroupModel orgInternalGroup = orgProvider.getOrganizationGroup(organization);
 
         // Split the path
         String[] split = splitPath(path, escapeSlashesInGroupPath(session));
@@ -984,7 +950,88 @@ public final class KeycloakModelUtils {
         }
 
         // Search for the group starting from the internal organization group as parent
-        return getGroupModel(session.groups(), realm, orgInternalGroup, split, 0);
+        return getGroupModel(session, realm, orgInternalGroup, split, 0);
+    }
+
+    /**
+     * Validates and retrieves the organization for an Identity Provider mapper.
+     * This performs all necessary checks to ensure the IdP-organization relationship is valid:
+     * - Organizations feature is enabled
+     * - Organization exists and is enabled
+     * - Bidirectional link exists (organization still has this IdP)
+     *
+     * @param session the Keycloak session
+     * @param idpModel the identity provider model
+     * @return the validated organization if all checks pass, null otherwise
+     */
+    public static OrganizationModel getOrganizationForIdpMapper(KeycloakSession session, IdentityProviderModel idpModel) {
+        String idpOrgId = idpModel.getOrganizationId();
+        if (idpOrgId == null) {
+            return null;
+        }
+
+        OrganizationProvider orgProvider = session.getProvider(OrganizationProvider.class);
+        if (orgProvider != null && orgProvider.isEnabled()) {
+            OrganizationModel organization = orgProvider.getById(idpOrgId);
+
+            if (organization != null && organization.isEnabled() && organization.getIdentityProviders().anyMatch(idp -> idp.getAlias().equals(idpModel.getAlias()))) {
+                return organization;
+            }
+        }
+
+        logger.warnf("Cannot obtain organization '%s' linked to IdP '%s'", idpModel.getAlias(), idpOrgId);
+
+        return null;
+    }
+
+    /**
+     * Retrieves and validates a group for use in an Identity Provider mapper.
+     * The lookup strategy is determined by the {@code groupType} config value:
+     * <ul>
+     *   <li>{@code "ORGANIZATION"} — searches within the organization groups linked to the IdP</li>
+     *   <li>{@code "REALM"} or missing — searches realm groups</li>
+     * </ul>
+     *
+     * @param session the Keycloak session
+     * @param realm the realm
+     * @param mapperModel the mapper model configuration containing the group path and group type
+     * @param context the brokered identity context containing the IdP configuration
+     * @return the group if found and valid, null otherwise (mapper should be skipped)
+     */
+    public static GroupModel getGroupForIdpMapper(KeycloakSession session,
+                                                   RealmModel realm,
+                                                   IdentityProviderMapperModel mapperModel,
+                                                   BrokeredIdentityContext context) {
+        String groupPath = mapperModel.getConfig().get(ConfigConstants.GROUP);
+        String groupTypeStr = mapperModel.getConfig().get(ConfigConstants.GROUP_TYPE);
+        GroupModel group = null;
+
+        // Parse the group type from config
+        GroupModel.Type groupType = null;
+        if (groupTypeStr != null) {
+            try {
+                groupType = GroupModel.Type.valueOf(groupTypeStr);
+            } catch (IllegalArgumentException e) {
+                // Invalid group type, treat as null
+            }
+        }
+
+        if (groupType == GroupModel.Type.ORGANIZATION) {
+            OrganizationModel organization = getOrganizationForIdpMapper(session, context.getIdpConfig());
+            if (organization != null) {
+                group = findGroupByPath(session, realm, organization, groupPath);
+            }
+        } else {
+            // GroupModel.Type.REALM or null → search realm groups
+            group = findGroupByPath(session, realm, groupPath);
+        }
+
+        if (group == null) {
+            logger.warnf("Unable to find group by path '%s' referenced by mapper '%s' on realm '%s'.", groupPath, mapperModel.getName(), realm.getName());
+            return null;
+        }
+
+        return group;
     }
 
     public static Stream<RoleModel> getClientScopeMappingsStream(ClientModel client, ScopeContainerModel container) {
@@ -993,8 +1040,24 @@ public final class KeycloakModelUtils {
                         Objects.equals(client.getId(), role.getContainer().getId()));
     }
 
-    // Used in various role mappers
+    /**
+     * @deprecated for removal. Use {@link #getRoleFromString(KeycloakSession, RealmModel, String)} instead.
+     */
+    @Deprecated(forRemoval = true, since = "26.6")
     public static RoleModel getRoleFromString(RealmModel realm, String roleName) {
+        return getRoleFromString(KeycloakSessionUtil.getKeycloakSession(), realm, roleName);
+    }
+
+    public static RoleModel getRoleFromString(KeycloakSession session, RealmModel realm, String roleName) {
+        if (session == null) {
+            return getRoleFromStringNoCaching(realm, roleName);
+        }
+        return session.getProvider(AlternativeLookupProvider.class)
+                .lookupRoleFromString(realm, roleName);
+    }
+
+    // Used in various role mappers
+    private static RoleModel getRoleFromStringNoCaching(RealmModel realm, String roleName) {
         if (roleName == null) {
             return null;
         }
@@ -1028,11 +1091,9 @@ public final class KeycloakModelUtils {
         if (scopeIndex > -1) {
             String appName = role.substring(0, scopeIndex);
             role = role.substring(scopeIndex + 1);
-            String[] rtn = {appName, role};
-            return rtn;
+            return new String[]{appName, role};
         } else {
-            String[] rtn = {null, role};
-            return rtn;
+            return new String[]{null, role};
 
         }
     }
@@ -1086,17 +1147,17 @@ public final class KeycloakModelUtils {
      * @param flowUnavailableHandler Will be executed when flow, sub-flow or executor is null
      * @param builtinFlowHandler will be executed when flow is built-in flow
      */
-    public static void deepDeleteAuthenticationFlow(KeycloakSession session, RealmModel realm, AuthenticationFlowModel authFlow, Runnable flowUnavailableHandler, Runnable builtinFlowHandler) {
+    public static void deepDeleteAuthenticationFlow(KeycloakSession session, RealmModel realm, AuthenticationFlowModel authFlow, Runnable flowUnavailableHandler, Runnable builtinFlowHandler, boolean isParentBuiltInFlow) {
         if (authFlow == null) {
             flowUnavailableHandler.run();
             return;
         }
-        if (authFlow.isBuiltIn()) {
+        if (isParentBuiltInFlow) {
             builtinFlowHandler.run();
         }
 
         realm.getAuthenticationExecutionsStream(authFlow.getId())
-                .forEachOrdered(authExecutor -> deepDeleteAuthenticationExecutor(session, realm, authExecutor, flowUnavailableHandler, builtinFlowHandler));
+                .forEachOrdered(authExecutor -> deepDeleteAuthenticationExecutor(session, realm, authExecutor, flowUnavailableHandler, builtinFlowHandler, isParentBuiltInFlow));
 
         realm.removeAuthenticationFlow(authFlow);
     }
@@ -1110,7 +1171,7 @@ public final class KeycloakModelUtils {
      * @param flowUnavailableHandler Handler that will be executed when flow, sub-flow or executor is null
      * @param builtinFlowHandler Handler that will be executed when flow is built-in flow
      */
-    public static void deepDeleteAuthenticationExecutor(KeycloakSession session, RealmModel realm, AuthenticationExecutionModel authExecutor, Runnable flowUnavailableHandler, Runnable builtinFlowHandler) {
+    public static void deepDeleteAuthenticationExecutor(KeycloakSession session, RealmModel realm, AuthenticationExecutionModel authExecutor, Runnable flowUnavailableHandler, Runnable builtinFlowHandler, boolean isParentBuiltInFlow) {
         if (authExecutor == null) {
             flowUnavailableHandler.run();
             return;
@@ -1119,7 +1180,7 @@ public final class KeycloakModelUtils {
         // recursively remove sub flows
         if (authExecutor.getFlowId() != null) {
             AuthenticationFlowModel authFlow = realm.getAuthenticationFlowById(authExecutor.getFlowId());
-            deepDeleteAuthenticationFlow(session, realm, authFlow, flowUnavailableHandler, builtinFlowHandler);
+            deepDeleteAuthenticationFlow(session, realm, authFlow, flowUnavailableHandler, builtinFlowHandler, isParentBuiltInFlow);
         }
 
         // remove the config if not shared
@@ -1222,7 +1283,7 @@ public final class KeycloakModelUtils {
             return displayName;
         }
 
-        SocialIdentityProviderFactory providerFactory = (SocialIdentityProviderFactory) session.getKeycloakSessionFactory()
+        SocialIdentityProviderFactory<?> providerFactory = (SocialIdentityProviderFactory<?>) session.getKeycloakSessionFactory()
                 .getProviderFactory(SocialIdentityProvider.class, provider.getProviderId());
         if (providerFactory != null) {
             return providerFactory.getName();
@@ -1258,7 +1319,7 @@ public final class KeycloakModelUtils {
      * @throws RuntimeException if a group does not exist
      */
     public static void setDefaultGroups(KeycloakSession session, RealmModel realm, Stream<String> groups) {
-        realm.getDefaultGroupsStream().collect(Collectors.toList()).forEach(realm::removeDefaultGroup);
+        realm.getDefaultGroupsStream().toList().forEach(realm::removeDefaultGroup);
         groups.forEach(path -> {
             GroupModel found = KeycloakModelUtils.findGroupByPath(session, realm, path);
             if (found == null) throw new RuntimeException("default group in realm rep doesn't exist: " + path);
